Fix navigation spacing issue

--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -1,34 +1,34 @@
 html {
-    margin: 0;
-    padding: 0;
+    margin:0px;
     scroll-snap-points-y: repeat(100vh);
     scroll-snap-type: y mandatory;
     background-color: gray;
 }
 
 body {
-    height: 100vh;
-    background-color: gray;
+    margin:0px;
+    background-color: black;
 }
 
-/* body {
-    margin:0;
-    background-color: black;
-} */
+.container{
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+}
+
 
 
 /* BARBA TRANSITIONS */
 
-/* html, body {
+html, body {
     margin: 0;
     padding: 0;
     background-color: gray;
-} */
+}
 
-/* body {
+body {
     height: 100vh;
     background: rgb(240, 240 240);
-} */
+}
 
 .wrapper {
     padding: 1em;
@@ -125,16 +125,30 @@ ul.transition li:nth-child(5) {
     z-index: 10;
     opacity: 0;
 }
+
+
 /* END BARBA TRANSITIONS */
 
 
 
-/* TABLE */
-.container{
-    margin-top: 10vh;
-    margin-bottom: 10vh;
-}
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* TABLE */
 .bootstrap-table, th, td {
     background:white;
   }
